force-app/main/default/objects/Notification_Auth_Details__mdt/Notification_Auth_Details__mdt.object-meta.xml
<CustomObject>
    <label>Notification Auth Details</label>
    <pluralLabel>Notification Auth Details</pluralLabel>
</CustomObject>