force-app/main/default/objects/Notification_Auth_Details__mdt/fields/Decryptionkey__c.field-meta.xml
<CustomField>
    <fullName>Decryptionkey__c</fullName>
    <label>Decryptionkey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>