force-app/main/default/objects/Notification_Auth_Details__mdt/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>