force-app/main/default/objects/Notification_Auth_Details__mdt/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <label>Group Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>