force-app/main/default/objects/Notification_Auth_Details__mdt/fields/Sample_Body__c.field-meta.xml
<CustomField>
    <fullName>Sample_Body__c</fullName>
    <label>Sample Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>