force-app/main/default/objects/Notification_Auth_Details__mdt/fields/Source_Facility__c.field-meta.xml
<CustomField>
    <fullName>Source_Facility__c</fullName>
    <label>Source+Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>